--- a/100_CSharpLanguage/101_Basics/06_Function/Function/Function.csproj
+++ b/100_CSharpLanguage/101_Basics/06_Function/Function/Function.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{51FAEA4E-C996-44E1-A802-453D8361C1FA}</ProjectGuid>
+    <ProjectGuid>{E62ED1CC-9AAB-4E06-AE02-5A72BE1A9198}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SmartLin.LearningCSharp.ClassAndObject</RootNamespace>
-    <AssemblyName>Namespace</AssemblyName>
+    <RootNamespace>SmartLin.LearningCSharp.Basics</RootNamespace>
+    <AssemblyName>Function</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
@@ -53,14 +53,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Class.cs" />
-    <Compile Include="Common\MessageService.cs" />
-    <Compile Include="Model\Major.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Model\Student.cs" />
-    <Compile Include="Model\StudentMajorService.cs" />
-    <Compile Include="Ui\StudentUi.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
