--- a/1.CSharpLanguage/1.6.DelegateAndEvent/1.6.1.Delegate/Delegate/Delegate.csproj
+++ b/1.CSharpLanguage/1.6.DelegateAndEvent/1.6.1.Delegate/Delegate/Delegate.csproj
@@ -53,12 +53,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BookOrderManager.cs" />
-    <Compile Include="SelectCourseDelegate.cs" />
+    <Compile Include="Service\BookOrderManager.cs" />
+    <Compile Include="Service\SelectCourseDelegate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SmsService.cs" />
-    <Compile Include="Student.cs" />
+    <Compile Include="Service\SmsService.cs" />
+    <Compile Include="Model\Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
