--- a/1.CSharpLanguage/1.7.GenericAndCollection/1.7.1.Generic/GenericDelegate/GenericDelegate.csproj
+++ b/1.CSharpLanguage/1.7.GenericAndCollection/1.7.1.Generic/GenericDelegate/GenericDelegate.csproj
@@ -53,17 +53,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class.cs" />
-    <Compile Include="StudentService.cs" />
-    <Compile Include="StudentUi.cs" />
-    <Compile Include="Major.cs" />
+    <Compile Include="Model\Class.cs" />
+    <Compile Include="Service\StudentService.cs" />
+    <Compile Include="Service\StudentUi.cs" />
+    <Compile Include="Model\Major.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Student.cs" />
+    <Compile Include="Model\Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
