--- a/1.CSharpLanguage/1.7.GenericAndCollection/1.7.1.Generic/GenericInterface/GenericInterface.csproj
+++ b/1.CSharpLanguage/1.7.GenericAndCollection/1.7.1.Generic/GenericInterface/GenericInterface.csproj
@@ -53,13 +53,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Course.cs" />
-    <Compile Include="CourseUi.cs" />
-    <Compile Include="IDisplay.cs" />
+    <Compile Include="Model\Course.cs" />
+    <Compile Include="Service\CourseUi.cs" />
+    <Compile Include="Service\IDisplay.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Student.cs" />
-    <Compile Include="StudentUi.cs" />
+    <Compile Include="Model\Student.cs" />
+    <Compile Include="Service\StudentUi.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
