--- a/2.WindowsForm/2.1.FormAndControl/2.1.1.WindowsForm/MessageBox/2.MessageBox.csproj
+++ b/2.WindowsForm/2.1.FormAndControl/2.1.1.WindowsForm/MessageBox/2.MessageBox.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{D843E245-E576-413B-A36F-A31985BFC6C3}</ProjectGuid>
+    <ProjectGuid>{EA9BB669-02FE-4E2C-8022-F79D3246EB4D}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SmartLin.LearningCSharp.FormAndControl</RootNamespace>
-    <AssemblyName>WindowsForm</AssemblyName>
+    <AssemblyName>MessageBox</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
