--- a/2.WindowsForm/2.1.FormAndControl/2.1.1.WindowsForm/PassValue/PassValue.csproj
+++ b/2.WindowsForm/2.1.FormAndControl/2.1.1.WindowsForm/PassValue/PassValue.csproj
@@ -57,25 +57,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Repository\UserRepository.cs" />
-    <Compile Include="Ui\MainForm.cs">
+    <Compile Include="Ui\frm_Main.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Ui\MainForm.Designer.cs">
-      <DependentUpon>MainForm.cs</DependentUpon>
+    <Compile Include="Ui\frm_Main.Designer.cs">
+      <DependentUpon>frm_Main.cs</DependentUpon>
     </Compile>
     <Compile Include="Model\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Ui\MainForm.resx">
-      <DependentUpon>MainForm.cs</DependentUpon>
+    <EmbeddedResource Include="Ui\frm_Main.resx">
+      <DependentUpon>frm_Main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Ui\StartForm.resx">
-      <DependentUpon>StartForm.cs</DependentUpon>
+    <EmbeddedResource Include="Ui\frm_Start.resx">
+      <DependentUpon>frm_Start.cs</DependentUpon>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -92,11 +92,11 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="Ui\StartForm.cs">
+    <Compile Include="Ui\frm_Start.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Ui\StartForm.Designer.cs">
-      <DependentUpon>StartForm.cs</DependentUpon>
+    <Compile Include="Ui\frm_Start.Designer.cs">
+      <DependentUpon>frm_Start.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
