--- a/2.WindowsForm/2.1.FormAndControl/2.1.3.TextBox/EventAndValidation/Tag.csproj
+++ b/2.WindowsForm/2.1.FormAndControl/2.1.3.TextBox/EventAndValidation/Tag.csproj
@@ -9,7 +9,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SmartLin.LearningCSharp.FormAndControl</RootNamespace>
-    <AssemblyName>EventAndValidation</AssemblyName>
+    <AssemblyName>Tag</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
@@ -89,9 +89,6 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Repository\CourseRepository.cs" />
-    <Compile Include="Ui\frm_CourseManagement_Operation.cs">
-      <SubType>Form</SubType>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Briefcase_16px.ico" />
