--- a/2.WindowsForm/2.1.FormAndControl/2.1.3.TextBox/KeyPress/KeyPress.csproj
+++ b/2.WindowsForm/2.1.FormAndControl/2.1.3.TextBox/KeyPress/KeyPress.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{42F187CF-1B0A-48C5-B24E-C84ECCC0058C}</ProjectGuid>
+    <ProjectGuid>{D52A3447-F21B-48AA-A149-B73161989320}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SmartLin.LearningCSharp.FormAndControl</RootNamespace>
-    <AssemblyName>HotKey</AssemblyName>
+    <AssemblyName>KeyPress</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
@@ -56,14 +56,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Course.cs" />
-    <Compile Include="Repository\CourseRepository.cs" />
     <Compile Include="Ui\frm_CourseManagement.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Ui\frm_CourseManagement.Designer.cs">
       <DependentUpon>frm_CourseManagement.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\Course.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Ui\frm_CourseManagement.resx">
@@ -89,6 +88,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Repository\CourseRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Briefcase_16px.ico" />
