--- a/3.DesignPattern/3.2.StructuralDesignPattern/3.2.1.DecoratorPattern/DecoratorPattern/DecoratorPattern.csproj
+++ b/3.DesignPattern/3.2.StructuralDesignPattern/3.2.1.DecoratorPattern/DecoratorPattern/DecoratorPattern.csproj
@@ -53,16 +53,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExchangedStudent.cs" />
-    <Compile Include="StudentCadre.cs" />
-    <Compile Include="StudentDecorator.cs" />
+    <Compile Include="Model\ExchangedStudent.cs" />
+    <Compile Include="Model\StudentCadre.cs" />
+    <Compile Include="Model\StudentDecorator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Student.cs" />
+    <Compile Include="Model\Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
