--- a/3.DesignPattern/3.2.StructuralDesignPattern/3.2.2.AdapterPattern/AdapterPattern/AdapterPattern.csproj
+++ b/3.DesignPattern/3.2.StructuralDesignPattern/3.2.2.AdapterPattern/AdapterPattern/AdapterPattern.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\Crypto\ReverseCrypto.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="Model\User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
