--- a/3.DesignPattern/3.2.StructuralDesignPattern/3.2.3.FacadePattern/FacadePattern/FacadePattern.csproj
+++ b/3.DesignPattern/3.2.StructuralDesignPattern/3.2.3.FacadePattern/FacadePattern/FacadePattern.csproj
@@ -59,8 +59,8 @@
     <Compile Include="Subsystem\Library.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Student.cs" />
-    <Compile Include="StudentAffairOffice.cs" />
+    <Compile Include="Model\Student.cs" />
+    <Compile Include="Model\StudentAffairOffice.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
