--- a/3.DesignPattern/3.2.StructuralDesignPattern/3.2.5.CompositePattern/CompositePattern/CompositePattern.csproj
+++ b/3.DesignPattern/3.2.StructuralDesignPattern/3.2.5.CompositePattern/CompositePattern/CompositePattern.csproj
@@ -55,10 +55,10 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Student.cs" />
-    <Compile Include="StudentCadre.cs" />
-    <Compile Include="StudentRepository.cs" />
-    <Compile Include="StudentStaff.cs" />
+    <Compile Include="Model\Student.cs" />
+    <Compile Include="Model\StudentCadre.cs" />
+    <Compile Include="Repository\StudentRepository.cs" />
+    <Compile Include="Model\StudentStaff.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
