--- a/3.DesignPattern/3.3.BehavioralDesignPattern/3.3.2.ObserverPattern/ObserverPattern/ObserverPattern.csproj
+++ b/3.DesignPattern/3.3.BehavioralDesignPattern/3.3.2.ObserverPattern/ObserverPattern/ObserverPattern.csproj
@@ -53,13 +53,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EvaluateEvent.cs" />
-    <Compile Include="Faculty.cs" />
+    <Compile Include="Model\EvaluateEvent.cs" />
+    <Compile Include="Model\Faculty.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Score.cs" />
-    <Compile Include="SmsManager.cs" />
-    <Compile Include="Student.cs" />
+    <Compile Include="Model\Score.cs" />
+    <Compile Include="Model\SmsManager.cs" />
+    <Compile Include="Model\Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
