--- a/3.DesignPattern/3.3.BehavioralDesignPattern/3.3.4.StatePattern/ExaminationAffair/ExaminationAffair.csproj
+++ b/3.DesignPattern/3.3.BehavioralDesignPattern/3.3.4.StatePattern/ExaminationAffair/ExaminationAffair.csproj
@@ -53,10 +53,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Examinee.cs" />
+    <Compile Include="Model\Examinee.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Student.cs" />
+    <Compile Include="Model\Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
