--- a/1.CSharpLanguage/1.2.ClassAndObject/1.2.9.Namespace/Namespace/Namespace.csproj
+++ b/1.CSharpLanguage/1.2.ClassAndObject/1.2.9.Namespace/Namespace/Namespace.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SmartLin.LearningCSharp.ClassAndObject</RootNamespace>
     <AssemblyName>Namespace</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
@@ -54,7 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Class.cs" />
-    <Compile Include="Common\MessageService.cs" />
+    <Compile Include="Common\SmsService.cs" />
     <Compile Include="Model\Major.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
