--- a/1.CSharpLanguage/1.4.Array/1.4.1.Array/Array/Array.csproj
+++ b/1.CSharpLanguage/1.4.Array/1.4.1.Array/Array/Array.csproj
@@ -53,11 +53,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Book.cs" />
-    <Compile Include="Course.cs" />
+    <Compile Include="Model\Book.cs" />
+    <Compile Include="Model\Course.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Student.cs" />
+    <Compile Include="Model\Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
