--- a/1.CSharpLanguage/1.4.Array/1.4.2.ArrayClass/ArrayClass/ArrayClass.csproj
+++ b/1.CSharpLanguage/1.4.Array/1.4.2.ArrayClass/ArrayClass/ArrayClass.csproj
@@ -53,11 +53,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class.cs" />
+    <Compile Include="Model\Class.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Student.cs" />
-    <Compile Include="StudentComparer.cs" />
+    <Compile Include="Model\Student.cs" />
+    <Compile Include="Model\StudentComparer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
