--- a/1.CSharpLanguage/1.4.Array/1.4.3.Enumerate/Enumerate/Enumerate.csproj
+++ b/1.CSharpLanguage/1.4.Array/1.4.3.Enumerate/Enumerate/Enumerate.csproj
@@ -53,10 +53,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class.cs" />
+    <Compile Include="Model\Class.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Student.cs" />
+    <Compile Include="Model\Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
