--- a/1.CSharpLanguage/1.10.Exception/1.10.1.Exception/Exception/Exception.csproj
+++ b/1.CSharpLanguage/1.10.Exception/1.10.1.Exception/Exception/Exception.csproj
@@ -58,7 +58,7 @@
     <Compile Include="Common\EmailService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="Model\User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
