--- a/1.CSharpLanguage/1.7.GenericAndCollection/1.7.7.Lookup/Lookup/Lookup.csproj
+++ b/1.CSharpLanguage/1.7.GenericAndCollection/1.7.7.Lookup/Lookup/Lookup.csproj
@@ -53,11 +53,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class.cs" />
-    <Compile Include="Major.cs" />
+    <Compile Include="Model\Class.cs" />
+    <Compile Include="Model\Major.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Student.cs" />
+    <Compile Include="Model\Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
