--- a/1.CSharpLanguage/1.9.StringAndRegularExpression/1.9.2.RegularExpression/RegularExpression/RegularExpression.csproj
+++ b/1.CSharpLanguage/1.9.StringAndRegularExpression/1.9.2.RegularExpression/RegularExpression/RegularExpression.csproj
@@ -53,9 +53,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\CryptoHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="Model\User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
