--- a/3.DesignPattern/3.3.BehavioralDesignPattern/3.3.1.StrategyPattern/StrategyPattern/StrategyPattern.csproj
+++ b/3.DesignPattern/3.3.BehavioralDesignPattern/3.3.1.StrategyPattern/StrategyPattern/StrategyPattern.csproj
@@ -53,7 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Common\HexadecimalCrypto.cs" />
+    <Compile Include="Common\HexCrypto.cs" />
     <Compile Include="Common\ICrypto.cs" />
     <Compile Include="Common\LeftShiftCrypto.cs" />
     <Compile Include="Program.cs" />
