--- a/1.CSharpLanguage/1.11.Reflection/1.11.1.Attribute/Attribute/Attribute.csproj
+++ b/1.CSharpLanguage/1.11.Reflection/1.11.1.Attribute/Attribute/Attribute.csproj
@@ -56,10 +56,10 @@
     <Compile Include="Model\Book.cs" />
     <Compile Include="Model\Course.cs" />
     <Compile Include="Common\IValidationAttribute.cs" />
-    <Compile Include="Common\FloatValidationAttribute.cs" />
+    <Compile Include="Common\RangeAttribute.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Common\StringValidationAttribute.cs" />
+    <Compile Include="Common\StringLengthAttribute.cs" />
     <Compile Include="Common\ValidationService.cs" />
   </ItemGroup>
   <ItemGroup>
